[project]
name = "kb25pkuser6"
version = "0.1.0"
description = ""
authors = [
    {name = "Kwon Cheol O",email = "cheolo7653@daum.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

